# ReversiGame

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsolePlayer.cpp  ConsolePlayer.h  Game.cpp  GameMenu.cpp  GameMenu.h  Play.cpp  Play.h  Player.cpp  Player.h  Point.cpp  Point.h  RegularRules.cpp  RegularRules.h  a.out  compile.txt  includes.txt  main.cpp  makefile  sources.txt  txt.txt
client/: CMakeLists.txt  info.txt  main.cpp
client/src/: Board.h  Client.cpp  Client.h  ConsoleDisplay.cpp  ConsoleDisplay.h  Display.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkReadPlayer.cpp  NetworkReadPlayer.h  Point.cpp  Point.h  Rules.h
includes/: ConsolePlayer.h  Game.h  Point.h  Rules.h
server/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  GameInfo.cpp  GameInfo.h  GamesList.cpp  GamesList.h  GamesListCommand.cpp  GamesListCommand.h  JoinCommand.cpp  JoinCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  WaitingGame.cpp  WaitingGame.h  info.txt  main.cpp
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  ConsolePlayer.cpp  ConsolePlayer.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  HumanPlayer.cpp  Player.cpp  Player.h  Point.cpp  Point.h  RegularRules.cpp  RegularRules.h  Rules.cpp  Rules.h  Sign.cpp  Sign.h  main.cpp
src/client/: CMakeLists.txt
src/client/src/: AIPlayer.cpp  Game.h
tests/: AITest.cpp  BoardTest.cpp  GameTest.cpp  RulesTest.cpp  main_test.cpp
